--- a/tools/index.html
+++ b/tools/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Création de map - trophee nsi ant</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
 
-    <input type="number" id="x" min="1" max="100" placeholder="Largeur (x)" >
-    <input type="number" id="y" min="1" max="100" placeholder="Hauteur (y)">
-    <input type="text" id="name" placeholder="name">
-    <button id="createMap">Créer map</button>
-    <button id="save">savegarder</button>
+    <div class="sidebar">
+        <input type="number" id="x" min="1" max="100" placeholder="Largeur (x)" >
+        <input type="number" id="y" min="1" max="100" placeholder="Hauteur (y)">
+        <input type="text" id="name" placeholder="name">
+        <button id="createMap">Créer map</button>
+        <button id="save">savegarder</button>
+    </div>
 <hr>
+<div class="sidbareElement">
     <button id="food">food 🌱</button>
     <button id="obstacle">obstacle 🪨</button>
     <button id="hill">fourmilière 🏠</button>
     <button id="path"> effacer (path) </button>
-<hr>
+</div>
+    <hr>
     
 
 </header>
@@ -32,57 +37,8 @@
 <h3>Veuillez saisir les coordonnées x/y de la map ainsi que son nom, puis créer la map pour commencer à la personnaliser avec les options telles que nourriture, obstacles...</h3>
 <h5>Une fois la map terminée, cliquez sur "Sauvegarder".</h5>
 
-<!--précisez ou enregistrer pour param.py-->
 
-<style>
-    main {
-        width: 100%;
-        height: 80dvh;
-        
-    }
-    #map {
-        width: 80%;
-        height: 100%;
-        background-color: rgb(188, 186, 190);
-        display: flex;
-        align-items: center;
-        align-self: center;
-        justify-content: center;
-        justify-self: center;
-        flex-direction: column;
-        border-radius: 15px;
 
-    }
-    .row {
-        display: flex;
-        flex-direction: row;
-    }
-    .cellule {
-        width: 25px;
-        pad: 13px;
-        margin: 4px;
-        height: 25px;
-    }
-    .path {
-        background-color: rgb(126, 249, 115);
-    }
-    .obstacle {
-        background-color: rgb(73, 73, 73);
-    }
-    .food {
-        background-color:rgb(255, 0, 0);
-    }
-    .hill {
-        background-color: rgb(207, 86, 0);
-    }
-
-    .on {
-        background-color: rgb(153, 239, 153);
-    }
-    .off {
-        background-color: red;
-    }
-</style>
 
 </body>
 </html>
