suppression dossier Simulation + evaporation pheromones(return?) + modification HTML + modifications CSS

--- a/tools/index.html
+++ b/tools/index.html
@@ -11,18 +11,18 @@
 <header>
 
     <div class="sidebar">
-        <input type="number" id="x" min="1" max="100" placeholder="Largeur (x)" >
-        <input type="number" id="y" min="1" max="100" placeholder="Hauteur (y)">
+        <input type="number" id="x" min="1" max="100" placeholder="Large" >
+        <input type="number" id="y" min="1" max="100" placeholder="Height">
         <input type="text" id="name" placeholder="name">
-        <button id="createMap">Créer map</button>
-        <button id="save">savegarder</button>
+        <button id="createMap">Create Map</button>
+        <button id="save">Save</button>
     </div>
 <hr>
 <div class="sidbareElement">
     <button id="food">food 🌱</button>
     <button id="obstacle">obstacle 🪨</button>
-    <button id="hill">fourmilière 🏠</button>
-    <button id="path"> effacer (path) </button>
+    <button id="hill">hill 🏠</button>
+    <button id="path"> Erase (path) </button>
 </div>
     <hr>
     
